--- a/Spamurai/Info.plist
+++ b/Spamurai/Info.plist
@@ -36,5 +36,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>H1_Font.TTF</string>
+	</array>
 </dict>
 </plist>
